Fix spacing issue

--- a/assets/styles/_layout.scss
+++ b/assets/styles/_layout.scss
@@ -12,7 +12,8 @@
   );
 
   width: 100%;
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
 
   @if $padding {
     max-width: $width + 2 * variables.$layout-padding;
