--- a/assets/styles/components/_timeline.scss
+++ b/assets/styles/components/_timeline.scss
@@ -390,7 +390,8 @@
     }
 
     &__text {
-      margin: 2rem auto;
+      margin-top: 2rem;
+      margin-bottom: 2rem;
 
       @include layout.layout("small");
     }
