--- a/assets/styles/components/content/_footer.scss
+++ b/assets/styles/components/content/_footer.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  margin-top: 3rem !important;
+  margin-top: 3rem;
 
   @include layout.layout("small");
 
